Fix left column alignment

--- a/FFMQWebAsm/wwwroot/css/app.css
+++ b/FFMQWebAsm/wwwroot/css/app.css
@@ -83,7 +83,7 @@ h2 {
     flex: 1;
     border-radius: 0px;
     gap: 0px 20px;
-    align-content: center;
+    align-content: flex-start;
 }
 
 .box-title {
